<resources>
    <string name="app_name">Diagnoze</string>
    <string name="title_activity_halaman_awal">HalamanAwal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Diagnoze</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_ttg">Tentang</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="menu_keluar">Keluar</string>

    1

    <string-array name="jenis_kelamin">
        <item>Laki-laki</item>
        <item>Perempuan</item>

    </string-array>
</resources>
