<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.diagnoze.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ttg"
        android:name="com.example.diagnoze.ui.tentang.GalleryFragment"
        android:label="@string/menu_ttg"
        tools:layout="@layout/fragment_tentang" />

    <fragment
        android:id="@+id/nav_pengaturan"
        android:name="com.example.diagnoze.ui.pengaturran.SlideshowFragment"
        android:label="@string/menu_pengaturan"
        tools:layout="@layout/fragment_pengaturan" />

    <fragment
        android:id="@+id/nav_riwayat"
        android:name="com.example.diagnoze.ui.riwayat.ToolsFragment"
        android:label="@string/menu_riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/nav_keluar"
        android:name="com.example.diagnoze.ui.keluar.ShareFragment"
        android:label="@string/menu_keluar"
        tools:layout="@layout/fragment_keluar" />

</navigation>